--- a/organizacoes/templates/organizacoes/documento_view.html
+++ b/organizacoes/templates/organizacoes/documento_view.html
@@ -22,6 +22,28 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
   }
+
+  .col1 {
+    -ms-flex: 0 0 20%;
+    flex: 0 0 5.2em;
+    max-width: 20%;
+    position: relative;
+    width: 100%;
+    padding-right: 6px;
+    padding-left: 15px; 
+  }
+
+  .col2 {
+    -ms-flex: 0 0 calc(100% - 0em);
+    flex: 0 0 calc(100% - 5.2em);
+    max-width: calc(100% - 0em);
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 6px;
+  }
+
+
 </style>
 
 <form id="meuForm" method="post" enctype="multipart/form-data">
@@ -63,8 +85,8 @@
           {% endif %}
         </div>
       {% else %}
-        <label for="organizacao" class="col-sm-1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.1em;">Organi.</label>
-        <div class="col-sm-11">
+        <label for="organizacao" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.1em;">Empresa</label>
+        <div class="col2">
           <select id="organizacao" name="organizacao" class="form-control">
             <option selected value> -- selecione uma organização -- </option>
             {% for org in organizacoes %}
@@ -91,8 +113,8 @@
           {% endif %}
         </div>
       {% else %}
-        <label for="projeto" class="col-sm-1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.1em;">Projeto</label>
-        <div class="col-sm-11">
+        <label for="projeto" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.1em;">Projeto</label>
+        <div class="col2">
         <select id="projeto" name="projeto" class="form-control">
           <option selected value> -- selecione um projeto -- </option>
           {% for proj in projetos %}
@@ -114,8 +136,8 @@
           {{tipo.nome}}
         </div>
       {% else %}
-        <label for="tipo_documento" class="col-sm-1 col-form-label">Tipo</label>
-        <div class="col-sm-11">
+        <label for="tipo_documento" class="col1 col-form-label">Tipo</label>
+        <div class="col2">
         <select id="tipo_documento" name="tipo_documento" class="form-control" required="required" >
           <option disabled selected value> -- selecione tipo de documento -- </option>
           {% for retorno in tipos_documentos %}
@@ -142,8 +164,8 @@
           setInterval(updateDateTime, 1000);
         </script>
       {% else %}
-        <label for="data" class="col-sm-1 col-form-label">Data</label>
-        <div class="col-sm-11">
+        <label for="data" class="col1 col-form-label">Data</label>
+        <div class="col2">
           <input id="data" class="form-control" type="datetime-local" name="data" value="{{data|date:'Y-m-d\TH:i'}}">
         </div>
       {% endif %}
@@ -151,8 +173,8 @@
 
     {% if not tipo or tipo and tipo.arquivo %}
       <div class="mb-3 row">
-        <label for="arquivo" class="col-sm-1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.5em;">Arquivo</label>
-        <div class="col-sm-11">
+        <label for="arquivo" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.5em;">Arquivo</label>
+        <div class="col2">
           <input required id="arquivo" type="file" name="arquivo" class="form-control" style="border: 0px; padding-left: 0px;"
                 accept="text/plain, application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-powerpoint, application/vnd.openxmlformats-officedocument.presentationml.presentation, image/*, video/mp4, video/x-m4v, video/webm, video/x-matroska, video/*, .mkv">
           {% if documentos %}
@@ -176,22 +198,31 @@
     
     {% if not tipo or tipo and tipo.link %}
       <div class="mb-3 row">
-        <label for="link" class="col-sm-1 col-form-label">Link</label>
-        <div class="col-sm-11">
+        <label for="link" class="col1 col-form-label">Link</label>
+        <div class="col2">
           <input class="form-control" type="text" style="max-width:100%;display:block" size="73" maxlength="{% max_length Documento "link" %}" id="link" name="link" placeholder="https://">
         </div>
       </div>
     {% endif %}
 
     <div class="mb-3 row">
-      <label for="lingua_do_documento" class="col-sm-1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.2em;">Língua</label>
-      <div class="col-sm-11">
+      <label for="lingua_do_documento" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.2em;">Língua</label>
+      <div class="col2">
         <select id="lingua_do_documento" name="lingua_do_documento" class="form-control" required="required" >
           <option value="portugues" selected="selected">Português</option>
           <option value="ingles">Inglês</option>
         </select>
       </div>
     </div>
+
+    {% if not travado %}
+      <div class="mb-3 row">
+        <label for="anotacao" class="col1 col-form-label" style="overflow: clip; overflow-clip-margin: 0.0em;">Anotação</label>
+        <div class="col2">
+          <input class="form-control" type="text" style="max-width:100%;display:block" size="73" maxlength="{% max_length Documento "anotacao" %}" id="anotacao" name="anotacao">
+        </div>
+      </div>
+    {% endif %}
 
     {% if not travado %}
       <div class="form-check">
