tirando parceiro e estudantes da lista de facilitadores para deixar mais responsivo

--- a/professores/templates/professores/dinamicas_view.html
+++ b/professores/templates/professores/dinamicas_view.html
@@ -109,11 +109,11 @@
               <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
             {% endfor %}
           </optgroup>
-          <optgroup label="Outros">
+          {% comment %} <optgroup label="Outros">
             {% for pessoa in pessoas %}
               <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
             {% endfor %}
-          </optgroup>
+          </optgroup> {% endcomment %}
       </select>
 
     </div>
