--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -53,9 +53,7 @@
       margin-bottom: 4px;
     }
 
-    .legenda-texto {
-      white-space: nowrap;
-    }
+    .legenda-texto {white-space: nowrap;}
 
     .legenda-block {
       flex: 1;
@@ -211,7 +209,7 @@
                         }
                       {% endif %}
                     }
-                    info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#566573'>" + info.event.extendedProps.local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
+                    info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#F6F5A3'>" + info.event.extendedProps.local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
                   }
                 }              
               },
