--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -62,7 +62,7 @@
                 let orientador = info.event.extendedProps.orientador.split(" ");
                 nome_orientador = orientador[0] + ' ' + orientador[orientador.length - 1];  
               }
-              info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#566573'>" + info.event.extendedProps.local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
+              info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#F6F5A3'>" + info.event.extendedProps.local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
 
             }
           }
