--- a/administracao/templates/administracao/import.html
+++ b/administracao/templates/administracao/import.html
@@ -30,6 +30,6 @@
     {% csrf_token %}
     <input type="file" name="arquivo" accept=".csv">
     <br><br>
-    <button class="btn btn-primary mb-1" type="submit">Enviar Arquivo</button>
+    <button class="btn btn-primary mb-1" type="submit">Carregar Arquivo</button>
   </form>
 {% endblock %}
