--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -61,10 +61,23 @@
       padding: 10px;
     }
 
+    .fc-title {
+      font-size: 8px;
+      overflow-x: clip;
+      text-overflow: ellipsis;
+      text-wrap: nowrap;
+    }
+
     @media (max-width: 900px) {
       .wrap {flex-direction: column-reverse;}
       .fc-event {
         font-size: 9px !important;
+      }
+    }
+
+    @media (max-width: 900px) {
+      .fc-title {
+        font-size: 7px;
       }
     }
   </style>
@@ -122,7 +135,6 @@
         $("#color_banca_falconi").css("color", color_banca_falconi);
         $("#banca_orientador").css("boxShadow", "0 0 3px 4px red");
         $("#banca_membro").css("boxShadow", "0 0 3px 4px darkblue");
-
       </script>
 
 
