--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -57,39 +57,39 @@
           if (!info.event.allDay) {
             if (info.view.type === "dayGridMonth" || info.view.type === "timeGridWeek") {
               let time = info.event.start.getHours() + ':' + info.event.start.getMinutes().toString().replace(/^(\d)$/, '0$1');
-              let nome_orientador = ""
+              let nome_orientador = "sem orientador"
               if (info.event.extendedProps.orientador) {
                 let orientador = info.event.extendedProps.orientador.split(" ");
-                nome_orientador = orientador[0] + ' ' + orientador[orientador.length - 1];  
+                if(orientador.length > 1) {
+                    nome_orientador = orientador[0] + ' ' + orientador[orientador.length - 1];
+                }
               }
               info.el.innerHTML = "<b>" + time + "</b><br><nobr>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#F6F5A3'>" + info.event.extendedProps.local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
-
-            }
+            } 
           }
         },
         events: [
           {% for encontro in encontros %} 
             {
+              title: ""
+                {% if encontro.facilitador %}+ 'Facilitador: {{encontro.facilitador}}\n'{% endif %}
+                {% if encontro.location %}+ 'Local: {{encontro.location}}\n'{% endif %}
                 {% if encontro.projeto %}
-                  title: '{{encontro.projeto.organizacao.sigla}} : ' + 
-                        '{{encontro.projeto.get_titulo}}' +
-                        '{% if encontro.projeto.orientador %}\nOri.: {{encontro.projeto.orientador}}{% endif %}' +
-                        '{% if encontro.location %}\nLocal: {{encontro.location}}{% endif %}' +
-                        '{% if encontro.facilitador %}\nFacilitador: {{encontro.facilitador}}{% endif %}',
-                {% else %}
-                  {% if encontro.facilitador %}title: 'Facilitador: {{encontro.facilitador}}',{% else %}title: 'Livre',{% endif %}
-                {% endif %}
+                  + 'Projeto: ({{encontro.projeto.organizacao.sigla}}) {{encontro.projeto.get_titulo}}' +
+                    '{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}'
+                {% endif %},
                 organizacao: "{{encontro.projeto.organizacao.sigla}}",
-                orientador: "{{encontro.projeto.orientador}}",
+                orientador: {% if encontro.projeto.orientador %}"{{encontro.projeto.orientador}}"{% else %}null{% endif %},
                 local: "{{encontro.location}}",
                 start: '{{encontro.startDate.year}}-{{encontro.startDate.month|stringformat:"02d"}}-{{encontro.startDate.day|stringformat:"02d"}}T{{encontro.startDate.hour|stringformat:"02d"}}:{{encontro.startDate.minute|stringformat:"02d"}}:00',
                 end: '{{encontro.endDate.year}}-{{encontro.endDate.month|stringformat:"02d"}}-{{encontro.endDate.day|stringformat:"02d"}}T{{encontro.endDate.hour|stringformat:"02d"}}:{{encontro.endDate.minute|stringformat:"02d"}}:00',
                 id: "{{encontro.id}}",
-                {% if encontro.projeto %}backgroundColor: "#5151D3",{% else %}backgroundColor: "#307f30",{% endif %}
+                {% if encontro.projeto %}backgroundColor: "#5151D3"{% else %}backgroundColor: "#307f30"{% endif %},
+                textEscape: false,
             },
           {% endfor %}
         ],
-
+        
         eventClick: function(event, jsEvent, view) {
           // Para editar uma mentoria
           var elem = document.createElement( "span" );
