--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -180,29 +180,22 @@ table, th, td {
     font-size: 21px;
     padding-bottom: 0.15em;  
   }
-  h3 {
-    font-size: 1.17em;
-  }
+  h3 {font-size: 1.17em;}
+  h4 {font-size: 1.12em;}
 }
 
 @media only screen and (max-width: 480px) {
-  /* table, th, td {
-    font-size: 12px;
-  } */
-  #canvas-holder {
-    width:100%;
-  }
+  #canvas-holder {width:100%;}
   .titulo {
     font-size: 20px;
     padding-bottom: 0.05em;  
   }
+  h3 {font-size: 1.09em;}
+  h4 {font-size: 1.05em;}
 } 
 
-
 @media (max-width: 800px) {
-  .container-fluid {
-    padding-right: 8px;padding-left: 8px;
-  }
+  .container-fluid {padding-right: 8px;padding-left: 8px;}
 }
 
 @page {
