escondendo os mais

--- a/documentos/templates/documentos/contratos_assinados.html
+++ b/documentos/templates/documentos/contratos_assinados.html
@@ -129,7 +129,7 @@
 
               <!-- Contrato(s) -->
               <td style="text-align:center; vertical-align: middle; position:relative;">
-                <small style="position:absolute; top:0; left:0; cursor:pointer;">
+                <small class="esconder" style="position:absolute; top:0; left:0; cursor:pointer;">
                   <a
                     class="open-documento"
                     data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'COP' %}"
