--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-  <span class="titulo">{{titulo}}<small><a
+  <span class="titulo">{{titulo}}<small class="esconder"><a
       href="{% url 'cadastrar_organizacao' %}"
       >&#10133;</a></small>
   </span>
