--- a/projetos/templates/projetos/lista_acompanhamento.html
+++ b/projetos/templates/projetos/lista_acompanhamento.html
@@ -22,7 +22,7 @@
 {% block content %}
 
   <span class="titulo">Acompanhamentos nas Organizações
-    <small><a
+    <small class="esconder"><a
       class="open-acompanhamento"
       href="{% url 'acompanhamento_view' %}"
       data-url="{% url 'acompanhamento_view' %}"
