--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -59,7 +59,7 @@
 
 {% block content %}
 
-  <span class="titulo">Propostas<small><a
+  <span class="titulo">Propostas<small class="esconder"><a
     href="{% url 'proposta_submissao' %}"
     >&#10133;</a></small>
   </span>
