--- a/documentos/templates/documentos/index_documentos.html
+++ b/documentos/templates/documentos/index_documentos.html
@@ -29,7 +29,7 @@
 
   <span class="titulo">Documentos
     {% if user.tipo_de_usuario == 4 %}
-    <small>
+    <small class="esconder">
       <a
         class="open-documento" style="cursor:pointer;"
         data-url="{% url 'adiciona_documento' %}"
