--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -53,7 +53,7 @@
   {% endif %}
 
   <br><strong>contato(s):</strong>
-  <small><a href="{% url 'cadastrar_usuario' %}?tipo=parceiro&organizacao={{organizacao.id}}">&#10133;</a></small>
+  <small class="esconder"><a href="{% url 'cadastrar_usuario' %}?tipo=parceiro&organizacao={{organizacao.id}}">&#10133;</a></small>
   <br>
   {% for parceiro in organizacao.parceiro_set.all|order_by:"-principal_contato,user" %}
     {% if parceiro.user.is_active %}
@@ -166,7 +166,7 @@
 
   <hr>
   <h3>Documentos
-    <small>
+    <small class="esconder">
       <a
         class="open-documento" style="cursor:pointer;"
         {% comment %} href="{% url 'adiciona_documento' organizacao.id %}" {% endcomment %}
@@ -179,7 +179,7 @@
 
   <hr>
   <h3>Certificados
-    <small>
+    <small class="esconder">
       <a href="{% url 'carregar_certificado' %}"
         >&#10133;</a
       >
@@ -192,7 +192,7 @@
   
   {% if organizacao.proposta_set.all %}
     <hr>
-    <h3>Propostas <small><a href="{% url 'proposta_submissao' %}?organizacao={{organizacao.id}}">&#10133;</a></small></h3>
+    <h3>Propostas <small class="esconder"><a href="{% url 'proposta_submissao' %}?organizacao={{organizacao.id}}">&#10133;</a></small></h3>
     <ol>
       {% for proposta in organizacao.proposta_set.all %}
         <a href="{% url 'proposta_completa' proposta.id %}">
@@ -226,7 +226,7 @@
   {% endif %}
   
   <hr>
-  <h3>Anotações <small>
+  <h3>Anotações <small class="esconder">
     <a
       class="open-annotation"
       href="{% url 'anotacao' organizacao.id %}"
