--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -13,7 +13,8 @@
 {% block content %}
 
   <span class="titulo">{{titulo}}
-    <a href="{% url 'cadastrar_usuario' %}?tipo=parceiro">&#10133;</a>
+    <small class="esconder">
+    <a href="{% url 'cadastrar_usuario' %}?tipo=parceiro">&#10133;</a></small>
   </span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
