--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -89,7 +89,7 @@
   <div id="tudo">
 
     <span class="titulo">Agendar Bancas
-      <small>
+      <small class="esconder">
         <a data-toggle="tooltip" data-html="true" animation="true" title="Agenda Nova Banca" class="open-modal"
             data-url="{% url 'bancas_criar' %}" href="{% url 'bancas_criar'%}"> 
             &#10133;
