--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -20,7 +20,7 @@
   {% include "impressora.html" %}
 
   <span class="titulo">Mentorias
-    <small>
+    <small class="esconder">
       <a data-toggle="tooltip" data-html="true" animation="true" title="Agenda Nova Mentoria" class="open-modal"
          data-url="{% url 'dinamicas_criar' %}" href="{% url 'dinamicas_criar'%}"> 
          &#10133;
