--- a/organizacoes/templates/organizacoes/projeto_feedback.html
+++ b/organizacoes/templates/organizacoes/projeto_feedback.html
@@ -41,7 +41,7 @@
 {% block content %}
 
   <span class="titulo">
-    <span lang="pt">Formulário de Feedback de Organizações Parceiras</span>
+    <span lang="pt">Formulário de Feedback de Organizações</span>
     <span lang="en">Organizations Feedback Form</span>
   </span>
 
