--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -160,21 +160,18 @@
         </tbody>
       </table>
     </div>
-        
+   
     {% if alunos_list %}
-      <div style="display: table;">
-        <div style="display: table-row;">
-            <div style="display: table-cell; padding: 4px;">
-              <b>Média no semestre = <span id="media"></span></b><br>
-              <b>Desvio padrão no semestre = <span id="desvio"></span></b><br>
-            </div>
-            {% if user.tipo_de_usuario == 4 %} 
-              <div style="display: table-cell; padding-left: 46px"> 
-                <a href="{% url 'blackboard_notas' ano_semestre %}">Tabela para Blackboard</a>
-              </div>
-            {% endif %}
-        </div>
+      <div id="medias" style="padding: 4px;">
+        <b>Média no semestre = <span id="media"></span></b><br>
+        <b>Desvio padrão no semestre = <span id="desvio"></span></b><br>
       </div>
+      {% if user.tipo_de_usuario == 4 %}
+        <br>
+        <div style="padding-left: 46px"> 
+          <a href="{% url 'blackboard_notas' ano_semestre %}">Tabela para Blackboard</a>
+        </div>
+      {% endif %}
     {% endif %}
 
     <script>
@@ -194,14 +191,15 @@
       });
 
       if(count > 0) {
-
+        $("#medias").show();
         $("#media").html((sum / count).toFixed(3));
-
         var tamanho = array.length
         var mean = array.reduce((a, b) => a + b) / tamanho
         std = Math.sqrt(array.map(x => Math.pow(x - mean, 2)).reduce((a, b) => a + b) / tamanho)
         $("#desvio").html(std.toFixed(5));
 
+      } else {
+        $("#medias").hide();
       }
       
       function carrega_pagina() {
