--- a/professores/templates/professores/todos_professores.html
+++ b/professores/templates/professores/todos_professores.html
@@ -49,7 +49,7 @@
         </td>
       </tr>
     {% endfor %}
-    <caption><small>usuários <u>sublinhados</u> são membros do comitê do PFE.</small></caption>
+    <caption><small>usuários <u>sublinhados</u> são membros do comitê do Capstone.</small></caption>
   </table>
   </div>
 
