--- a/projetos/templates/projetos/projeto_detalhes.html
+++ b/projetos/templates/projetos/projeto_detalhes.html
@@ -134,7 +134,7 @@
       <strong data-toggle="tooltip" data-html="true" animation="true" title="
       Exemplos de resultados ou entregas esperadas.
       Durante o projeto isso deverá ser dicutido com a organização parceira e com os professores orientadores para um melhor alinhamento.
-      Independente do que as organizações sugerirem nesse campo, existem uma série de relatórios, apresentações, vídeos e outros materiais como obrigatórios no PFE.
+      Independente do que as organizações sugerirem nesse campo, existem uma série de relatórios, apresentações, vídeos e outros materiais como obrigatórios no Capstone.
       ">
         Expectativas de resultados/entregas:
       </strong>
