--- a/projetos/templates/projetos/projetos_vs_propostas.html
+++ b/projetos/templates/projetos/projetos_vs_propostas.html
@@ -54,11 +54,11 @@
                 {% if lingua == "pt" %}
                     <p>Recebemos propostas de <b>{{total_org_propostas}}</b> organizações distintas.</p>
                     <p>Realizados projetos com <b>{{total_org_projetos}}</b> organizações distintas.</p>
-                    <br><p>Obs: Dados de prospecção são em geral incompletos e baseados apenas nas anotações realizadas no sistema do PFE.</p>
+                    <br><p>Obs: Dados de prospecção são em geral incompletos e baseados apenas nas anotações armazenadas.</p>
                 {% else %}
                     <p>Proposals received from <b>{{total_org_propostas}}</b> differente organizations.</p>
                     <p>Projects carried out from  <b>{{total_org_projetos}}</b> different organizations.</p>
-                    <br><p>Obs: Prospecting data is generally incomplete and based only on notes made in the PFE system.</p>
+                    <br><p>Obs: Prospecting data is generally incomplete and based only on stored notes.</p>
                 {% endif %}
 
             </small>
