--- a/templates/500.html
+++ b/templates/500.html
@@ -160,7 +160,7 @@
 <body class="loading">
   <h1>500</h1>
   <h2>
-    Erro inesperado no servidor do PFE<br>
+    Erro inesperado no servidor<br>
     Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>
   </h2>
   <div class="gears">
