--- a/users/templates/users/estudantes_objetivos.html
+++ b/users/templates/users/estudantes_objetivos.html
@@ -78,7 +78,7 @@
                       SEM ORGANIZAÇÃO
                     {% endif %}
                     {% if alocacao.projeto.avancado %}
-                      <span style="color:red">(PFE Avançado)</span>
+                      <span style="color:red">(Capstone Avançado)</span>
                     {% endif %}
                     {% if alocacao.projeto.proposta.internacional %}
                       <span style="color:red">(Internacional)</span>
