--- a/administracao/templates/administracao/relatorio_alunos.html
+++ b/administracao/templates/administracao/relatorio_alunos.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     
-    <span class="titulo">Estudantes - PFE {{configuracao.ano}}.{{configuracao.semestre}}</span>
+    <span class="titulo">Estudantes - {{configuracao.ano}}.{{configuracao.semestre}}</span>
 
     {% if alunos %}
 
