--- a/estudantes/templates/mensagem_feedback_final.html
+++ b/estudantes/templates/mensagem_feedback_final.html
@@ -10,11 +10,11 @@ Olá {{estudante.user.get_full_name}},
 
 %0D%0A%0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-Estamos encerrando o PFE, e gostaríamos de saber o impacto do PFE na sua vida profissional para nos ajudar a oferecer um curso sempre melhor, gostaríamos de fazer algumas perguntas finais (trataremos os seus dados como confidenciais):
+Estamos encerrando o Capstone (antigo PFE), e gostaríamos de saber o impacto dele na sua vida profissional para nos ajudar a oferecer um curso sempre melhor, gostaríamos de fazer algumas perguntas finais (trataremos os seus dados como confidenciais):
 
 %0D%0A%0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-&bull; O quanto você recomendaria fazermos um projeto de PFE nos próximos semestres com a empresa que fez o PFE%3F
+&bull; O quanto você recomendaria fazermos um novo projeto nos próximos semestres com a empresa que você realizou o projeto%3F
 
 %0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
