--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -391,7 +391,7 @@
             jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
             console.log('error'+request.responseText);
           {% else %}
-            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+            jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
           {% endif %}
         }
       });
@@ -431,7 +431,7 @@
             jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
             console.log('error'+request.responseText);
           {% else %}
-            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+            jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
           {% endif %}
         }
       });
@@ -488,7 +488,7 @@
                   jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
                   console.log('error'+request.responseText);
                 {% else %}
-                  jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+                  jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
                 {% endif %}
               }
           });
