--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -229,7 +229,7 @@
               jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
               console.log('error'+request.responseText);
             {% else %}
-              jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+              jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
             {% endif %}
           }
       });
@@ -260,7 +260,7 @@
             jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
             console.log('error'+request.responseText);
           {% else %}
-            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+            jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
           {% endif %}
         }
       });
