--- a/propostas/templates/propostas/proposta_detalhes.html
+++ b/propostas/templates/propostas/proposta_detalhes.html
@@ -32,7 +32,7 @@
   {% include "prioridades.html" %}
 
   <hr>
-  <br><b><label for="autorizador">Membro do comitê do PFE responsável pela proposta</label></b>:
+  <br><b><label for="autorizador">Membro do comitê do Capstone responsável pela proposta</label></b>:
   <span id="autorizador">
     {{ proposta.autorizado.get_full_name }}
     <a href="mailto:{{proposta.autorizado.email}}"> &lt;{{proposta.autorizado.email}}&gt;</a>
