--- a/templates/edicoes_ajax.html
+++ b/templates/edicoes_ajax.html
@@ -105,7 +105,7 @@
               jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
               console.log('error in ajax: '+request.responseText);
             {% else %}
-              jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+              jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
             {% endif %}
           }
       });
