--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
-Caro usuário do PFE,
+Caro usuário do Capstone,
 
-    Para atualizar sua conta do PFE. Clique no link a seguir:
+    Para atualizar sua conta. Clique no link a seguir:
 
     {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
