--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -44,7 +44,7 @@
     <strong>Matrícula:</strong> {{aluno.matricula}}<br>
   {% endif %}
   <strong>Curso:</strong> {{aluno.curso2}}<br>
-  <strong>Periodo PFE:</strong> 
+  <strong>Periodo do Capstone:</strong> 
   {% if aluno.anoPFE and aluno.semestrePFE %}
     {{aluno.anoPFE}}.{{aluno.semestrePFE}}
   {% else %}
