--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -112,7 +112,7 @@
           </td>
         </tr>
         {% endfor %}
-        <caption style="text-align:right"><small>Projetos <u>sublinhados</u> são de PFE Avançado</small></caption>
+        <caption style="text-align:right"><small>Projetos <u>sublinhados</u> são de Capstone Avançado</small></caption>
       </table>
     </div>
     <br>
@@ -169,7 +169,7 @@
         </tbody>
       </table>
       {% if ano == 0 or semestre == 0 %}
-        <small>estudantes reprovados e do PFE avançado contam mais de uma vez</small>
+        <small>estudantes reprovados e do Capstone avançado contam mais de uma vez</small>
       {% endif %}
       </div>
       <br>
