--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -219,17 +219,17 @@
   <script>
 
     function ajusta() {
-      document.querySelector('#tudo').style.width = "1200px";  
+      document.querySelector("#tudo").style.width = "1200px";  
       {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
         // Escondendo informações
-        if($('.lista_operacao').is(":hidden")) {
-          $('#titulo_operacao').hide();
+        if($(".lista_operacao").is(":hidden")) {
+          $("#titulo_operacao").hide();
         }          
-        if($('.lista_academico').is(":hidden")) {
-          $('#titulo_academico').hide();
+        if($(".lista_academico").is(":hidden")) {
+          $("#titulo_academico").hide();
         }
-        if($('.lista_aulas').is(":hidden")) {
-          $('#titulo_aulas').hide();
+        if($(".lista_aulas").is(":hidden")) {
+          $("#titulo_aulas").hide();
         }
         carrega_semestre();
       {% endif %}
@@ -237,16 +237,16 @@
 
     function reajusta() {
         // Reajustando tela para visualização no browser
-        document.querySelector('#tudo').style.width = "100%";
+        document.querySelector("#tudo").style.width = "100%";
         {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
-          if($('.lista_operacao').is(":hidden")) {
-            $('#titulo_operacao').show();
+          if($(".lista_operacao").is(":hidden")) {
+            $("#titulo_operacao").show();
           }          
-          if($('.lista_academico').is(":hidden")) {
-            $('#titulo_academico').show();
+          if($(".lista_academico").is(":hidden")) {
+            $("#titulo_academico").show();
           }
-          if($('.lista_aulas').is(":hidden")) {
-            $('#titulo_aulas').show();
+          if($(".lista_aulas").is(":hidden")) {
+            $("#titulo_aulas").show();
           }
           carrega_semestre();
         {% endif %}
@@ -973,21 +973,29 @@
             }
           }
 
+          // Em caso de eventos que passam pelo final de semana, essa rotina remove se o evento não começa ou acabar exatamente no dia
+          if (date.getDay() === 6 || date.getDay() === 0) { // sábado ou domingo
+            eventos = eventos.filter(function(e) {
+              return (e.startDate.toISOString().slice(0,10) == date.toISOString().slice(0,10) || 
+                      e.endDate.toISOString().slice(0,10) == date.toISOString().slice(0,10));
+              });              
+          }
+
           if(eventos.length==1) {
             $(element).css({
               "background-color": eventos[0].color 
             });
           } else if (eventos.length==2) {
             $(element).css(
-              "background", $(element).css('background-image') + ', ' + "-webkit-gradient(linear, left top, right bottom, color-stop(50%," + eventos[0].color + "), color-stop(50%," + eventos[1].color + "))" 
+              "background", $(element).css("background-image") + ", " + "-webkit-gradient(linear, left top, right bottom, color-stop(50%," + eventos[0].color + "), color-stop(50%," + eventos[1].color + "))" 
             );
           } else if (eventos.length==3) {
             $(element).css(
-              "background", $(element).css('background-image') + ', ' + "linear-gradient(to right, " + eventos[0].color + " 33%, " + eventos[1].color + " 33% 66%, " + eventos[2].color + " 66%)" 
+              "background", $(element).css("background-image") + ", " + "linear-gradient(to right, " + eventos[0].color + " 33%, " + eventos[1].color + " 33% 66%, " + eventos[2].color + " 66%)" 
             );
           } else if (eventos.length > 3) {
             $(element).css(  // muitas cores
-              "background", $(element).css('background-image') + ', ' + "-webkit-radial-gradient(yellow, lightblue, PaleVioletRed, green)" 
+              "background", $(element).css("background-image") + ", " + "-webkit-radial-gradient(yellow, lightblue, PaleVioletRed, green)" 
             );
           }
 
