melhor divisão para 3 cores

--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -1003,7 +1003,7 @@
             );
           } else if (eventos.length==3) {
             $(element).css(
-              "background", $(element).css("background-image") + ", " + "linear-gradient(to right, " + eventos[0].color + " 33%, " + eventos[1].color + " 33% 66%, " + eventos[2].color + " 66%)" 
+              "background", $(element).css("background-image") + ", " + "linear-gradient(300deg, " + eventos[0].color + " 36%, " + eventos[1].color + " 36% 64%, " + eventos[2].color + " 64%)"
             );
           } else if (eventos.length > 3) {
             $(element).css(  // muitas cores
