--- a/estudantes/templates/estudantes/encontros_marcar.html
+++ b/estudantes/templates/estudantes/encontros_marcar.html
@@ -143,9 +143,13 @@
             },
             error: function (request, status, error) {
                 {% if user.tipo_de_usuario == 4 %} 
+                  if(request.responseText){
                     alert(request.responseText);
                     jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
                     console.log("error"+request.responseText);
+                  } else {
+                    jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+                  }
                 {% else %}
                     jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
                 {% endif %}
